--- a/MusicSchool/_assets/scss/object/component/_hamburger.scss
+++ b/MusicSchool/_assets/scss/object/component/_hamburger.scss
@@ -15,7 +15,7 @@
     transform: translateX(-50%);
     transition:.3s
   }
-  .hamburger {
+  .c-hamburger {
     width: 72px;
     height: 50px;
     background-color: v.$red;
@@ -48,7 +48,7 @@
   }
 
 //   ハンバーガーメニュー
-.hamburger-menu{
+.c-hamburger-menu{
     background-color: v.$red;
     color: #fff;
     font-size: 18px;
@@ -62,7 +62,7 @@
         display: block;
     }
 }
-.hamburger-item{
+.c-hamburger-item{
     display: block;
     padding: 20px;
     transition: .5s;
@@ -71,7 +71,7 @@
         color: #fff;
     }
 }
-.hamburger-bg{
+.c-hamburger-bg{
     position: fixed;
     top:0;
     left: 0;
