--- a/MusicSchool/_assets/scss/style.scss
+++ b/MusicSchool/_assets/scss/style.scss
@@ -28,6 +28,7 @@
  *-------------------*/
 @use "./object/project/top";
 @use "./object/project/about";
+@use "./object/project/reason";
 /*-------------------
  * utility
  -------------------*/
