--- a/MusicSchool/_assets/scss/layout/_wrapper.scss
+++ b/MusicSchool/_assets/scss/layout/_wrapper.scss
@@ -6,6 +6,7 @@
 .main-wrapper{
     margin: 0 auto;
     padding: 0 20px;
+    max-width: 1080px;
     @include mq(){
         padding: 0 100px;
     }
