--- a/MusicSchool/_assets/scss/style.scss
+++ b/MusicSchool/_assets/scss/style.scss
@@ -30,12 +30,14 @@
 @use "./object/project/about";
 @use "./object/project/reason";
 @use "./object/project/voice";
+@use "./object/project/introduction";
 /*-------------------
  * utility
  -------------------*/
 @use "./object/utility/text";
 @use "./object/utility/display";
 @use "./object/utility/size";
+@use "./object/utility/margin";
 /*-------------------
  * javascript
  -------------------*/
