add faq, fix reason

--- a/MusicSchool/_assets/scss/object/project/_introduction.scss
+++ b/MusicSchool/_assets/scss/object/project/_introduction.scss
@@ -5,7 +5,7 @@
 
 #introduction {
     padding-top: 42px;
-    @include mq(){
+    @include mq(lg){
         padding-top: 49px;
     }
 }
@@ -13,7 +13,7 @@
     margin-top: 37px;
     @include flex(center, start);
     column-gap: 13px;
-    @include mq(){
+    @include mq(lg){
         margin-top: 54px;
         @include flex(flex-start, start);
         column-gap: 44px;
@@ -22,7 +22,7 @@
 .introduction__shape{
     position: relative;
     padding-top: 10px;
-    @include mq(){
+    @include mq(lg){
         padding-top: 25px;
         margin-left: 42.5px;
     }
@@ -31,7 +31,7 @@
 .introduction__circle{
     position: absolute;
     left: 8px;
-    @include mq(){
+    @include mq(lg){
         left: 8px;
     }
 }
@@ -48,7 +48,7 @@
     img:nth-child(4){
         top:79.1%;
     }
-    @include mq(){
+    @include mq(lg){
         img:nth-child(1){
             top:3.7%;
         }
@@ -69,7 +69,7 @@
         tr{
             td{
                 display: block;
-                @include mq(){
+                @include mq(lg){
                     display: table-cell;
                 }
             }
@@ -80,7 +80,7 @@
     width:99.9%;
     @include l_height(22,33);
     height: 41px;
-    @include mq(){
+    @include mq(lg){
         width: 25.4%;
         padding-top:10px;
     }
@@ -88,7 +88,8 @@
 .introduction__text{
     @include l_height(16,30);
     height: 127px;
-    @include mq(){
+    width: 99.9%;
+    @include mq(lg){
         @include l_height(18,30);
         height: 118px;
     }
