--- a/MusicSchool/_assets/scss/style.scss
+++ b/MusicSchool/_assets/scss/style.scss
@@ -33,6 +33,7 @@
 @use "./object/project/voice";
 @use "./object/project/introduction";
 @use "./object/project/faq";
+@use "./object/project/news";
 /*-------------------
  * utility
  -------------------*/
