--- a/MusicSchool/_assets/scss/layout/_wrapper.scss
+++ b/MusicSchool/_assets/scss/layout/_wrapper.scss
@@ -11,3 +11,9 @@
         padding: 0 100px;
     }
 }
+.footer-wrapper{
+    @include mq(){
+        padding: 0 240px;
+        margin: 0 auto;
+    }
+}
