--- a/MusicSchool/_assets/scss/object/utility/_margin.scss
+++ b/MusicSchool/_assets/scss/object/utility/_margin.scss
@@ -7,3 +7,12 @@
 .u--mt-6{
     margin-top: -6px !important;
 }
+.u-m-auto{
+    margin: 0 auto;
+}
+.u-mr-100{
+    margin-right: 100px;
+}
+.u-ml-auto{
+    margin-left: auto;
+}
