--- a/MusicSchool/_assets/scss/style.scss
+++ b/MusicSchool/_assets/scss/style.scss
@@ -43,7 +43,9 @@
 @use "./object/utility/display";
 @use "./object/utility/size";
 @use "./object/utility/margin";
+@use "./object/utility/position";
 /*-------------------
  * javascript
  -------------------*/
-@use "./object/javascript/js-slider"
+@use "./object/javascript/js-slider";
+@use "./object/javascript/js-button";
