--- a/MusicSchool/_assets/scss/foundation/_system.scss
+++ b/MusicSchool/_assets/scss/foundation/_system.scss
@@ -69,7 +69,8 @@ $baseFontSize: 16;
 //////////////////////////////////////
 
 // 擬似要素で三角形
-@mixin triangle($direction, $width, $height, $color) {
+@mixin triangle                     
+($direction, $width, $height, $color) {
     width: 0;
     height: 0;
     border-style: solid;
