--- a/MusicSchool/_assets/scss/object/utility/_position.scss
+++ b/MusicSchool/_assets/scss/object/utility/_position.scss
@@ -6,8 +6,15 @@
 .u-pos-abs{
     position: absolute;
 }
+.u-pos-sticky{
+    position: sticky;
+    z-index: 1;
+}
 .u-pos-rel{
     position: relative;
+}
+.u-l-0{
+    left:0;
 }
 .u-right-0{
     right: 0;
