--- a/MusicSchool/_assets/scss/layout/_footer.scss
+++ b/MusicSchool/_assets/scss/layout/_footer.scss
@@ -5,7 +5,7 @@
 
 #footer{
     background-color: v.$red;
-    padding-top: 33px;
+    padding-top: 41px;
     padding-bottom: 50px;
     @include mq(){
         padding-top: 42px;
@@ -13,9 +13,9 @@
 }
 .footer__nav{
     ul{
-        @include flex(space-evenly);
+        @include flex(center);
         flex-wrap: wrap;
-        column-gap: 12px;
+        column-gap: 30px;
         row-gap: 4px;
         padding: {
             left:50px;
