--- a/MusicSchool/_assets/scss/style.scss
+++ b/MusicSchool/_assets/scss/style.scss
@@ -26,6 +26,8 @@
 @use "./object/component/toggle";
 @use "./object/component/card";
 @use "./object/component/breadcrumb";
+@use "./object/component/fv";
+@use "./object/component/pagination";
 /*-------------------
  * project
  *-------------------*/
