--- a/MusicSchool/_assets/scss/object/component/_section.scss
+++ b/MusicSchool/_assets/scss/object/component/_section.scss
@@ -11,3 +11,11 @@
         @include l_height(30,50);
     }
 }
+.c-sub-page-title{
+    @include l_height(25,40);
+    text-align: center;
+    font-weight: bold;
+    @include mq(){
+        @include l_height(25,43);
+    }
+}
