--- a/MusicSchool/_assets/scss/style.scss
+++ b/MusicSchool/_assets/scss/style.scss
@@ -28,6 +28,7 @@
 @use "./object/component/breadcrumb";
 @use "./object/component/fv";
 @use "./object/component/pagination";
+@use "./object/component/detail";
 /*-------------------
  * project
  *-------------------*/
