--- a/MusicSchool/_assets/scss/style.scss
+++ b/MusicSchool/_assets/scss/style.scss
@@ -29,6 +29,7 @@
 @use "./object/component/fv";
 @use "./object/component/pagination";
 @use "./object/component/detail";
+@use "./object/component/linear-nav";
 /*-------------------
  * project
  *-------------------*/
