--- a/MusicSchool/_assets/scss/object/component/_card.scss
+++ b/MusicSchool/_assets/scss/object/component/_card.scss
@@ -10,6 +10,9 @@
     &__img-container{
         position: relative;
     }
+    &__txt-container{
+        width: 100%;
+    }
     &__label{
         background-color: v.$red;
         color: #fff;
