--- a/MusicSchool/_assets/scss/object/component/_detail.scss
+++ b/MusicSchool/_assets/scss/object/component/_detail.scss
@@ -6,40 +6,75 @@
 .c-detail__introduction{
     @include l_height(16,30);
     margin-top: 24px;
+    @include mq(){
+        @include l_height(18,30);
+        margin-top: 45px;
+    }
 }
 .c-detail__main{
-    margin-top: 38px;
+    margin-top: 37px;
     padding-bottom: 42px;
     border-bottom: 0.5px solid #000;
+    @include mq(){
+        margin-top: 34px;
+        padding-bottom: 45px;
+    }
     h2{
         @include l_height(20,30);
         font-weight: bold;
+        @include mq(){
+            @include l_height(20,40);
+        }
     }
     p{
         margin-top: 18px;
         @include l_height(16,30);
+        @include mq(){
+            margin-top: 14px;
+            @include l_height(18,30);
+        }
     }
     img{
         margin-top: 42px;
+        @include mq(){
+            margin-top: 24px;
+            width: 100%;
+            height: auto;
+            max-width: 300px;
+            max-height: 200px;
+        }
     }
     ul{
         margin-top: 24px;
+        @include mq(){
+            margin-top: 20px;
+        }
         li{
             @include l_height(16,30); 
             &::before{
                 content: '・'
+            }
+            @include mq(){
+                @include l_height(18,30);
             }
         }
     }
 }
 .c-detail__summary{
     margin-top: 45px;
+    @include mq(){
+        margin-top: 40px;
+    }
     h3{
         @include l_height(20,30);
         font-weight: bold;
         border-left: 3px solid #000;
         padding: {
             left: 6px;
+        }
+        @include mq(){
+            @include l_height(20,40);
+            letter-spacing: 0.005em;
         }
     }
 }
@@ -53,14 +88,29 @@
         bottom: 15px;
         left: 70px;
     }
+    @include mq(){
+        margin-top: 20px;
+        padding: {
+            top: 14px;
+            bottom: 14px;
+            right: 30px;
+        }
+    }
     &__icon{
         position: absolute;
         top: 22px;
         left: 25px;
+        @include mq(){
+            top: 20px;
+            left: 30px;
+        }
     }
     &__text{
         @include l_height(16,30);
         width: 100%;
+        @include mq(){
+            @include l_height(18,30);
+        }
     }
 }
 .c-detail__back-link{
@@ -69,4 +119,8 @@
     color: v.$red;
     @include l_height(20,33);
     font-weight: bold;
+    width: 8.8rem;
+    @include mq(){
+        margin-top: 24px;
+    }
 }
