--- a/MusicSchool/_assets/scss/object/component/_linear-nav.scss
+++ b/MusicSchool/_assets/scss/object/component/_linear-nav.scss
@@ -7,7 +7,10 @@
     width: 100%;
     &__list{
         @include flex();
-        column-gap: 20px;
+        column-gap: 21px;
+        @include mq(){
+            column-gap: 80px;
+        }
     }
     &__link-item{
         display: inline-block;
@@ -18,15 +21,41 @@
             color: #fff;
             @include l_height(17,30);
             padding: {
-                top: 10px;
-                bottom: 10px;
+                top: 4px;
+                bottom: 4px;
                 left: 20px;
+                right: 20px;
+            }
+            @include mq(){
+                padding: {
+                    top: 3.5px;
+                    bottom: 3.5px;
+                }
             }
         }
         &__title{
             @include l_height(16,25);
-            margin-top: 16px;
+            margin-top: 11px;
             font-weight: bold;
+            @include mq(){
+                margin-top: 0;
+            }
+        }
+        &__img{
+            width: 98px;
+        }
+    }
+    &__prev__label{
+        text-align: left;
+    }
+    &__next__label{
+        text-align: right;
+    }
+    &__card{
+        @include mq(){
+            @include flex();
+            column-gap: 16px;
+            margin-top: 13px;
         }
     }
 }
