--- a/MusicSchool/_assets/scss/object/project/_blog.scss
+++ b/MusicSchool/_assets/scss/object/project/_blog.scss
@@ -42,22 +42,22 @@
     &__img{
         height: 200px;
         @include mq(md){
-           min-height: 200px;
+           min-height: 350px;
         }
     }
     &__title{
         @include l_height(20,30);
         margin-top: 25px;
         @include mq(lg){
-            margin-top: 18px;
-            @include l_height(20,25);
+            margin-top: 50px;
+            @include l_height(25,40);
         }
     }
     &__date{
         text-align: right;
         margin-top: 14px;
         @include mq(lg){
-            margin-top: 11px;
+            margin-top: 20px;
             @include l_height(17,30);
         }
     }
@@ -197,43 +197,116 @@
 }
 // ブログ詳細
 .blog-detail__sns-nav{
-    margin-top: 23px;
-}
-.blog-detail__card {
-    margin-top: 50px;
-    &__date{
-        text-align: left;
-        @include l_height(17,30);
-        margin-top: 8.1px;
+    margin-top: 30px;
+    @include mq(){
+        margin-top: 23px;
     }
 }
 #blog-detail__rel-article{
-    margin-top: 70px;
+    margin-top: 67.5px;
     margin-bottom: 20px;
+    @include mq(){
+        margin-top: 95px;
+    }
+}
+.blog-detail__rel-article__title{
+    @include mq(){
+        text-align: left;
+        padding-left: 30px;
+    }
+}
+.blog-detail__main-card__title{
+    @include l_height(20,30);
+    margin-top: 25px;
+    @include mq(lg){
+        margin-top: 44px;
+        @include l_height(25,40);
+    }
+}
+.blog-detail__main-card__date{
+    margin-top: 13.5px;
+    text-align: left;
+    letter-spacing: 0.027em;
+    @include mq(lg){
+        text-align: left;
+        @include l_height(17,30);
+        margin-top: 5px;
+        letter-spacing: 0;
+    }
 }
 .blog-detail__card{
+    margin-top: 50px;
+    @include mq(){
+        margin-top: 0;
+    }
     &--flex{
         column-gap: 20px;
+        @include mq(){
+            column-gap: 31px;
+        }
     }
     &__label{
         padding: {
             top: 7px;
-            bottom: 8px;
+            bottom: 5px;
             left: 17px;
-            right: 19px;
+            right: 15px;
+        }
+        @include mq(){
+            padding: {
+                top: 5px;
+                bottom: 6px;
+                left: 17.5px;
+                right: 15px;
+            }
         }
     }
     &__img{
-        max-width:160px;
+        width:160px;
+        height: 111px;
+        @include mq(){
+            width: 200px;
+            height: 140px;
+        }
     }
     &__title{
-        @include l_height(15,25);
+        @include l_height(17,28);
         font-weight: bold;
-        margin-top: 10px;
+        margin-top: 6px;
+        overflow: hidden;
+        height: 51px;
+        @include mq(){
+            @include l_height(20,25);
+            margin-top: 0;
+            overflow: visible;
+            height: auto;
+        }
     }
     &__date{
-        margin-top: 18px;
+        margin-top: 10px;
         @include l_height(17,30);
+        @include mq(){
+            margin-top: 10px;
+            margin-left: 4px;
+        }
+    }
+}
+.blog-detail__rel-card{
+    margin-top: 20px;
+    @include mq(){
+        &:first-of-type{
+            margin-top: 30px;
+        }
+        &:not(:first-of-type){
+            margin-top: 30px;
+        }
+    }
+}
+#blog-detail__ad{
+    margin-top: 28.5px;
+    border: 0.5px solid #000;
+    @include mq(){
+        margin-top: 0;
     }
 }
 .blog-detail__ad__content{
@@ -241,9 +314,146 @@
     height: 228px;
     margin: {
         top: 20px;
-        bottom: 20px;
+        bottom: 21px;
         left: 20px;
         right: 20px;
     }
     @include flex(center,center);
+    @include l_height(18,33);
+    font-weight: bold;
+    @include mq(){
+        height: 170px;
+        margin: {
+            top: 14px;
+            bottom: 14px;
+            left: 16px;
+            right: 14px;
+        }
+    }
+}
+#blog-detail__search{
+    border: 0.5px solid #000;
+    margin-top: 26px;
+    @include mq(){
+        margin-top: 30px;
+    }
+}
+.blog-detail__search-field{
+    display: flex;
+    margin: {
+        top: 20px;
+        bottom: 20px;
+        left: 20px;
+        right: 20px;
+    }
+    @include mq(){
+        margin: {
+            top: 15px;
+            bottom: 15px;
+            left: 18px;
+            right: 14px;
+        }
+        height: 40px;
+    }
+}
+.blog-detail__search-input{
+    background-color: #E8E8E8;
+    width: 100%;
+}
+#blog-detail__recommend{
+    margin-top: 30px;
+}
+.blog-detail__recommend__articles{
+    margin-top: 20px;
+    @include mq(){
+        margin-top: 14px;
+    }
+}
+.blog-detail__recommend__article{
+    @include flex(start,flex-start);
+    column-gap: 20px;
+    &:not(:first-of-type){
+        margin-top: 20px;
+    }
+    @include mq(){
+        column-gap: 15px;
+        &:not(:first-of-type){
+            margin-top: 15px;
+        }
+    }
+}
+.blog-detail__recommend__article__img{
+    background-color: #E8E8E8;
+    width: 240px;
+    height: 110px;
+    @include mq(){
+        width: 95px;
+        height: 75px;
+    }
+}
+.blog-detail__recommend__article__title{
+    @include l_height(17,28);
+    margin-top: 5px;
+    @include mq(){
+        margin-top: -6px;
+        overflow: hidden;
+        max-width: 140px;
+        width: 100%;
+        height: 55px;
+    }
+}
+#blog-detail__category{
+    margin-top: 32px;
+    padding-bottom: 194px;
+        @include mq(){
+        margin-top: 30px;
+        padding-bottom: 196px;
+    }
+}
+.blog-detail__category__link{
+    width: 100%;
+    display: inline-block;
+    border-bottom: .5px solid #000;
+    @include l_height(17,28);
+    padding: {
+        top: 10px;
+        bottom: 9px;
+    }
+    @include mq(){
+        padding: {
+            top: 8px;
+            bottom: 10px;
+        }
+    }
+}
+.blog-detail__linear-nav{
+    margin-top: 47px;
+    @include mq(){
+        margin-top: 56px;
+    }
+}
+.blog-detail__main-container{
+    @include mq(){
+        @include flex(center, flex-start);
+        column-gap: 30px;
+        margin-top: 70px;
+        padding-bottom: 167px;
+    }
+}
+.blog-detail__left{
+    @include mq(){
+        width: 100%;
+        max-width: 600px;
+    }
+}
+.blog-detail__right{
+    @include mq(){
+        width: 100%;
+        max-width: 250px;
+    }
+}
+.blog-detail__introduction{
+    @include mq(){
+        height: 150px;
+    }
 }
