--- a/MusicSchool/_assets/scss/style.scss
+++ b/MusicSchool/_assets/scss/style.scss
@@ -42,6 +42,7 @@
 @use "./object/project/news";
 @use "./object/project/blog";
 @use "./object/project/plan";
+@use "./object/project/notice";
 /*-------------------
  * utility
  -------------------*/
