--- a/MusicSchool/_assets/scss/object/project/_blog.scss
+++ b/MusicSchool/_assets/scss/object/project/_blog.scss
@@ -415,6 +415,7 @@
     display: inline-block;
     border-bottom: .5px solid #000;
     @include l_height(17,28);
+    width: 8.8rem;
     padding: {
         top: 10px;
         bottom: 9px;
