add contact-form, contact-send

--- a/MusicSchool/_assets/scss/object/utility/_margin.scss
+++ b/MusicSchool/_assets/scss/object/utility/_margin.scss
@@ -22,3 +22,12 @@
 .u-mt-19{
     margin-top: 19px;
 }
+.u-mr-30{
+    margin-right: 30px;
+}
+.u-mb-20{
+    margin-bottom: 20px;
+}
+.u-mb-30{
+    margin-bottom: 30px;
+}
