--- a/MusicSchool/_assets/scss/style.scss
+++ b/MusicSchool/_assets/scss/style.scss
@@ -45,6 +45,7 @@
 @use "./object/project/plan";
 @use "./object/project/notice";
 @use "./object/project/contact";
+@use "./object/project/notfound";
 /*-------------------
  * utility
  -------------------*/
