--- a/MusicSchool/_assets/scss/object/project/_blog.scss
+++ b/MusicSchool/_assets/scss/object/project/_blog.scss
@@ -185,6 +185,10 @@
             background-color: #000;
             color: #fff;
         }
+        &:active{
+            background-color: #000;
+            color: #fff;
+        }
     }
     &__ellipsis{
         padding: {
