--- a/MusicSchool/_assets/scss/style.scss
+++ b/MusicSchool/_assets/scss/style.scss
@@ -46,6 +46,7 @@
 @use "./object/project/notice";
 @use "./object/project/contact";
 @use "./object/project/notfound";
+@use "./object/project/search";
 /*-------------------
  * utility
  -------------------*/
