--- a/MusicSchool/_assets/scss/style.scss
+++ b/MusicSchool/_assets/scss/style.scss
@@ -47,6 +47,7 @@
 @use "./object/project/contact";
 @use "./object/project/notfound";
 @use "./object/project/search";
+@use "./object/project/result";
 /*-------------------
  * utility
  -------------------*/
