--- a/MusicSchool/_assets/scss/object/component/_nav.scss
+++ b/MusicSchool/_assets/scss/object/component/_nav.scss
@@ -21,6 +21,26 @@
         column-gap: 3.4px;
     }
 }
-.c-sns-link{
-
+.c-nav-itemlink {
+    &:hover{
+        opacity: 0.5;
+    }
+    position: relative;
+    display: inline-block;
+    text-decoration: none;
+    &::after {
+        position: absolute;
+        bottom: -4px;
+        left: 0;
+        content: '';
+        width: 100%;
+        height: 2px;
+        background: #000;
+        transform: scale(0, 1);
+        transform-origin: left top;
+        transition: transform .3s;
+    }
+    &:hover::after {
+        transform: scale(1, 1);
+    }
 }
