--- a/MusicSchool/_assets/scss/object/component/_card.scss
+++ b/MusicSchool/_assets/scss/object/component/_card.scss
@@ -26,6 +26,7 @@
     &__img{
         width: 100%;
         height: auto;
+        object-fit: cover;
     }
     &__title{
         font-weight: bold;
