--- a/MusicSchool/_assets/scss/object/component/_linear-nav.scss
+++ b/MusicSchool/_assets/scss/object/component/_linear-nav.scss
@@ -43,6 +43,8 @@
         }
         &__img{
             width: 98px;
+            height: 75px;
+            object-fit: cover;
         }
     }
     &__prev__label{
