--- a/MusicSchool/_assets/scss/object/project/_notice.scss
+++ b/MusicSchool/_assets/scss/object/project/_notice.scss
@@ -95,7 +95,7 @@
             background-color: #000;
             color: #fff;
         }
-        &.actived{
+        &.active{
             background-color: #000;
             color: #fff;
         }
