--- a/MusicSchool/_assets/scss/object/project/_result.scss
+++ b/MusicSchool/_assets/scss/object/project/_result.scss
@@ -126,13 +126,10 @@
 }
 // 詳細画面
 #result_details-main{
-    padding-top: 50px;
+    padding-top: 46px;
     @include mq(){
         padding-top: 70px;
     }
-}
-.result_details__main-card{
-
 }
 .result-details__main-card__label{
     width: 100px;
@@ -146,72 +143,117 @@
     }
 }
 .result_details__main-card__title{
-    margin-top: 30px;
+    margin-top: 26px;
     @include l_height(20,30);
     @include mq(){
-        margin-top: 50px;
+        margin-top: 43px;
         @include l_height(25,40);
     }
 }
 .result_details__main-card__date{
-    margin-top: 20px;
+    margin-top: 8px;
     @include l_height(17,30);
     @include mq(){
-        margin-top: 30px;
+        margin-top: 16px;
     }
 }
 .result-details__profile__container{
     @include mq(){
+        margin-top: 57px;
         @include flex(start,flex-start);
-        column-gap: 40px;
+        column-gap: 0;
     }
 }
 .result-details__profile__container-left{
-    width: 50%;
+    @include mq(){
+        width: 50%;
+    }
 }
 .result-details__profile__container-right{
-    width: 50%;
+    @include mq(){
+        width: 50%;
+    }
 }
 .result-detail__profile-table{
-    margin-top: 30px;
+    margin-top: 23px;
+    @include mq(){
+        margin-top: 10px;
+    }
     tr{
         th{
             border: 0.5px solid #707070;
             background-color: #E5E5E5;
             @include l_height(18,30);
             font-weight: bold;
-            padding:10px;
+            padding: {
+                top: 4px;
+                bottom: 4px;
+                left: 10px;
+                right: 10px;
+            }
             width: 120px;
             @include mq(){
                 width: 140px;
+                padding: {
+                    top: 3px;
+                    bottom: 3px;
+                    left: 20px;
+                    right: 20px;
+                }
             }
         }
         td{
             border: 0.5px solid #707070;
-            padding: 10px;
+            padding: {
+                top: 4px;
+                bottom: 4px;
+                left: 10px;
+                right: 10px;
+            }
             @include l_height(18,30);
             width: 215px;
             @include mq(){
                 width: 260px;
+                padding: {
+                    top: 3px;
+                    bottom: 3px;
+                    left: 20px;
+                    right: 20px;
+                }
             }
         }
     }
 }
 .result-details__profile__desc{
     @include l_height(18,30);
-    margin-top: 30px;
+    margin-top: 22px;
+    @include mq(){
+        margin-top: 0;
+    }
 }
 .result_details__linear-nav{
-    margin-top: 50px;
+    margin-top: 43px;
+    @include mq(){
+        margin-top: 64px;
+    }
 }
 .result_details__linear-nav__list{
     @include mq(){
-        column-gap: 170px;
+        column-gap: 200px;
+    }
+}
+.result-details__linear-nav__card{
+    @include mq(){
+        align-items: flex-start;
     }
 }
 #result_details__rel-article{
-    padding-top: 50px;
+    padding-top: 67px;
     padding-bottom: 196px;
+    @include mq(){
+        padding-top: 91px;
+        padding-bottom: 157px;
+    }
 }
 .result_details__rel-article__title{
     @include mq(){
@@ -219,8 +261,19 @@
         padding-left: 30px;
     }
 }
+.result-details__card-list{
+    margin-top: 21px;
+    @include mq(){
+        margin-top: 30px;
+    }
+}
 .result_details__rel-card{
-    margin-top: 20px;
+    &:not(:first-of-type){
+        margin-top: 20px;
+        @include mq(){
+            margin-top: 30px;
+        }
+    }
 }
 .result_details__card--flex{
     column-gap: 20px;
@@ -246,14 +299,21 @@
 }
 .result_details__card__title{
     @include l_height(17,28);
+    margin-top: -5px;
+    overflow: hidden;
+    height: 3em;
     @include mq(){
         @include l_height(20,25);
+        overflow: visible;
+        height: auto;
+        margin-top: -2px;
     }
 }
 .result_details__card__date{
     @include l_height(17,30);
-    margin-top: 18px;
+    margin-top: 11px;
     @include mq(){
-        margin-top: 22px;
+        margin-top: 13px;
+        margin-left: 4px;
     }
 }
