--- a/MusicSchool/_assets/scss/object/project/_top.scss
+++ b/MusicSchool/_assets/scss/object/project/_top.scss
@@ -21,7 +21,7 @@
             url(../img/PC/top/FV.png) 1x,
             url(../img/PC/top/FV@2x.png) 2x
           );
-          background-position: center;
+          background-position: top;
     }
     &::after{
         content:'';
